--- a/components/Ads/AdBanner.module.scss
+++ b/components/Ads/AdBanner.module.scss
@@ -18,10 +18,14 @@
   border-radius: $border-radius-small;
 
   .image {
+    transition: $transition;
     img {
       object-fit: scale-down;
       width: 100%;
       height: 200px;
+    }
+    &:hover {
+      transform: scale(1.1);
     }
   }
   .text {
