--- a/components/Ads/AdBanner.module.scss
+++ b/components/Ads/AdBanner.module.scss
@@ -7,7 +7,7 @@
   background-position: center;
   background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
   width: 100%;
-  height: 220px;
+  // height: 220px;
   padding: spacing(1);
   display: grid;
   align-items: center;
@@ -16,13 +16,23 @@
   grid-gap: spacing(1.5);
   box-shadow: $shadow-soft;
   border-radius: $border-radius-small;
-
+  @media (min-width: $tablet) {
+    height: 400px;
+  }
   .image {
     transition: $transition;
     img {
       object-fit: scale-down;
       width: 100%;
       height: 200px;
+      user-select: none;
+      -moz-user-select: none;
+      -webkit-user-drag: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      @media (min-width: $tablet) {
+        height: 300px;
+      }
     }
     &:hover {
       transform: scale(1.1);
