--- a/components/Cards/VehicleCard.module.scss
+++ b/components/Cards/VehicleCard.module.scss
@@ -64,34 +64,14 @@
     }
     .features {
       display: grid;
-      grid-template-columns: repeat(auto-fill, calc(50% - 4px));
+      grid-template-columns: 60% 40%;
+      // grid-template-rows: repeat(auto-fill, calc(50% - 4px));
       grid-gap: spacing(0.5);
       padding-top: spacing(0.5);
-      .feature {
-        display: flex;
-        align-items: center;
-        span {
-          text-align: left;
-          white-space: nowrap;
-          line-height: $line-height-s;
-          font-family: $font-family-secondary;
-          color: $color-black;
-          font-size: $font-size-s;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          font-weight: $font-weight-normal;
-        }
-        svg {
-          min-width: $font-size-icon-small;
-          margin-right: spacing(0.5);
-          color: $color-darker-gray;
-          font-size: $font-size-icon-small;
-        }
-      }
-      .feature:last-child {
+      > div:last-child {
         grid-column: 1/3;
       }
-      .feature:nth-child(even) {
+      > div:nth-child(even) {
         justify-self: flex-end;
       }
     }
