--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -66,6 +66,7 @@ $shadow-soft: 0 2px 4px 0 $color-darker-gray;
 $box-shadow-search: 0 1px 3px 1px $color-complimentary;
 
 $border-radius-input: 8px;
+$border-radius-medium: 6px;
 $border-radius-small: 4px;
 $border-mobile-app-footer: 6px 6px 0 0;
 
