--- a/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
+++ b/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   width: 100%;
   height: 550px;
+  overflow: hidden;
   margin: spacing(8) 0;
   @media (min-width: $tablet) {
     padding: 0 spacing(8);
@@ -24,8 +25,12 @@
   .imageContainer {
     width: 20%;
     height: 100%;
+    transition: $transition;
+    &.maximized {
+      width: 80%;
+    }
     @media (min-width: $tablet) {
-      width: 50%;
+      width: 50% !important;
       > div {
         border-top-left-radius: $border-radius-input;
         border-bottom-left-radius: $border-radius-input;
@@ -42,9 +47,13 @@
     border-top-color: $color-gray;
     border-bottom-color: $color-gray;
     border-left-color: transparent;
-    width: 80%;
+    width: 20%;
+    transition: $transition;
+    &.maximized {
+      width: 80%;
+    }
     @media (min-width: $tablet) {
-      width: 50%;
+      width: 50% !important;
       padding: spacing(1) spacing(2);
       border-top-right-radius: $border-radius-input;
       border-bottom-right-radius: $border-radius-input;
@@ -55,6 +64,7 @@
       grid-row-gap: spacing(1);
       border-bottom: $border-light-gray;
       padding-bottom: spacing(1);
+      margin-bottom: spacing(1);
       > div:nth-child(even) {
         justify-self: flex-end;
         margin-left: auto;
@@ -75,16 +85,16 @@
 
 @keyframes slideInRight {
   0% {
-    transform: translateX(50%);
+    transform: translateX(10%);
   }
   50% {
     transform: translateX(0);
   }
   75% {
-    transform: translateX(-25%);
+    transform: translateX(-10%);
   }
   100% {
-    transform: translateX(50%);
+    transform: translateX(10%);
   }
 }
 
@@ -93,9 +103,11 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  height: 100%;
   svg {
     position: absolute;
     animation: slideInRight 2s ease-in-out infinite;
     animation-fill-mode: forwards;
+    fill: $color-complimentary;
   }
 }
