--- a/components/Header/MobileHeader.module.scss
+++ b/components/Header/MobileHeader.module.scss
@@ -61,7 +61,8 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
+  max-width: 100vw;
   z-index: 10;
   min-height: 50px;
   padding: spacing(1);
