--- a/components/Image/ImageCarousel.module.scss
+++ b/components/Image/ImageCarousel.module.scss
@@ -7,6 +7,18 @@
   position: relative;
   background: white;
   overflow: hidden;
+
+  .expandButtonDesktop {
+    position: absolute;
+    bottom: spacing(2);
+    right: spacing(2);
+    svg {
+      width: 32px;
+      height: 32px;
+      color: white;
+    }
+  }
+
   > img {
     width: 100%;
     height: 100%;
@@ -43,6 +55,7 @@
         color: white;
       }
     }
+
     img {
       border-radius: $border-radius-medium;
       border: 1px solid $color-light-gray;
