fix ad banner mobile, fix ios input shadow

--- a/components/Carousels/AdCarousel.module.scss
+++ b/components/Carousels/AdCarousel.module.scss
@@ -2,6 +2,11 @@
 
 .container {
   position: relative;
+  ul:first-child {
+    li {
+      padding: 0 spacing(0.5);
+    }
+  }
   .bullets {
     position: absolute;
     left: 50%;
