add base modal, add image carousel modal

--- a/components/Image/ImageCarousel.module.scss
+++ b/components/Image/ImageCarousel.module.scss
@@ -8,7 +8,7 @@
   background: white;
   overflow: hidden;
 
-  .expandButtonDesktop {
+  .expandButton {
     position: absolute;
     bottom: spacing(2);
     right: spacing(2);
