--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -139,7 +139,6 @@ table {
 button,
 input,
 select,
-input[type='text'],
 textarea {
   background-color: transparent;
   outline: none;
@@ -148,6 +147,12 @@ textarea {
   margin: 0;
   font: unset;
   cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+input[type='text'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
