--- a/components/Modals/BaseModal.module.scss
+++ b/components/Modals/BaseModal.module.scss
@@ -9,6 +9,8 @@
   width: 100%;
   height: 100%;
   z-index: 10000;
+  display: flex;
+  flex-direction: column;
   .closeButton {
     display: flex;
     margin-left: auto;
