--- a/components/Input/Select.module.scss
+++ b/components/Input/Select.module.scss
@@ -110,6 +110,7 @@
   .option {
     display: flex;
     justify-content: center;
+    align-items: center;
     text-align: left;
     padding: spacing(2) spacing(1);
     &:focus {
