--- a/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
+++ b/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   width: 100%;
   height: 584px;
-  overflow: hidden;
   margin: spacing(8) 0;
   @media (min-width: $tablet) {
     padding: 0 spacing(8);
@@ -24,8 +23,8 @@
   display: flex;
   .imageContainer {
     width: 20%;
-    height: 100%;
-    transition: $transition;
+    height: 588px;
+    // transition: $transition;
     border: 1px solid transparent;
     &.maximized {
       width: 80%;
@@ -49,11 +48,10 @@
     border-bottom-color: $color-gray;
     border-left-color: transparent;
     width: 20%;
-    transition: $transition;
+    // transition: $transition;
     box-shadow: $shadow-soft;
     display: flex;
     flex-direction: column;
-
     &.maximized {
       width: 80%;
     }
@@ -62,30 +60,6 @@
       padding: spacing(1) spacing(2);
       border-top-right-radius: $border-radius-input;
       border-bottom-right-radius: $border-radius-input;
-    }
-    .vehicleDetails {
-      display: grid;
-      grid-template-columns: 50% 50%;
-      grid-row-gap: spacing(1);
-      border-bottom: $border-light-gray;
-      padding-bottom: spacing(1);
-      margin-bottom: spacing(1);
-
-      @media (max-width: $tablet) {
-        max-height: 118px;
-        overflow: auto;
-      }
-
-      > div:nth-child(even) {
-        justify-self: flex-end;
-        margin-left: auto;
-        div {
-          justify-content: flex-end;
-        }
-        h6 {
-          text-align: right;
-        }
-      }
     }
     .title {
       h3 {
@@ -149,5 +123,28 @@
     font-weight: $font-weight-normal;
     color: $color-darker-gray;
     text-decoration: line-through;
+  }
+}
+
+.vehicleDetails {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-row-gap: spacing(1);
+  border-bottom: $border-light-gray;
+  padding-bottom: spacing(1);
+  margin-bottom: spacing(2);
+  @media (max-width: $tablet) {
+    max-height: 118px;
+    overflow: auto;
+  }
+  > div:nth-child(even) {
+    justify-self: flex-end;
+    margin-left: auto;
+    div {
+      justify-content: flex-end;
+    }
+    h6 {
+      text-align: right;
+    }
   }
 }
