vehicle card overlay

--- a/components/Modals/BaseModal.module.scss
+++ b/components/Modals/BaseModal.module.scss
@@ -20,5 +20,9 @@
   }
   .wrapper {
     overflow: auto;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
