--- a/styles/global.scss
+++ b/styles/global.scss
@@ -223,3 +223,7 @@ textarea {
   justify-content: center;
   display: flex;
 }
+
+.react-multiple-carousel__arrow {
+  background: $color-dark-semi-transparent !important;
+}
