--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -37,6 +37,7 @@ $color-black: #211d1e;
 $color-white: #fff;
 $color-dark: #292f4c;
 $color-dark-semi-transparent-heavy: rgba(41, 47, 76, 0.8);
+$color-complimentary-transparent-heavy: rgba(46, 125, 50, 0.8);
 $color-dark-semi-transparent: rgba(41, 47, 76, 0.6);
 $color-dark-gray: #d1d1d6;
 $color-darker-gray: #aaa;
