--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -3,4 +3,10 @@
 .container {
   max-width: $layout;
   margin: 0 auto;
+  &.gray {
+    background: $color-light-gray;
+  }
+  &.fullscreen {
+    min-height: 100vh;
+  }
 }
