--- a/styles/global.scss
+++ b/styles/global.scss
@@ -227,3 +227,41 @@ textarea {
 .react-multiple-carousel__arrow {
   background: $color-dark-semi-transparent !important;
 }
+
+@keyframes fadeInOut {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes moveAll {
+  from {
+    transform: translate(-20px, -8px);
+  }
+  to {
+    transform: translateY(0, 0);
+  }
+}
+
+@keyframes moveHand {
+  from {
+    transform: translateY(0, 0) rotate(0);
+  }
+  to {
+    transform: translate(0, 0) rotate(-15deg);
+  }
+}
+
+.guy_svg__paperplane-icon {
+  animation: moveAll 8s ease infinite alternate;
+}
+.guy_svg__vehicle-icon {
+  animation: fadeInOut 5s ease infinite alternate;
+}
+.guy_svg__arm-left {
+  animation: moveHand 5s ease-in-out infinite alternate;
+  transform-origin: 50px 150px;
+}
