--- a/components/Cards/VehicleCard.module.scss
+++ b/components/Cards/VehicleCard.module.scss
@@ -19,6 +19,7 @@
     position: absolute;
     right: spacing(2);
     top: spacing(2);
+    z-index: 1;
     background: white;
     border-top-right-radius: $border-radius-input;
     border-bottom-left-radius: $border-radius-input;
@@ -30,16 +31,25 @@
   .image {
     width: 100%;
     height: 180px;
+    overflow: hidden;
+    .imageLink {
+      &:hover {
+        img {
+          transform: scale(1.1);
+        }
+      }
+      img {
+        transition: transform 0.6s ease;
+        border-top-right-radius: 8px;
+        border-top-left-radius: 8px;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
 
     @media (min-width: $tablet) {
       height: 200px;
-    }
-    img {
-      border-top-right-radius: 8px;
-      border-top-left-radius: 8px;
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
     }
   }
   .content {
@@ -48,7 +58,7 @@
     @media (min-width: $tablet) {
       padding: spacing(1);
     }
-    h6 {
+    .title {
       text-align: left;
       font-family: $font-family-secondary;
       color: $color-black;
@@ -61,8 +71,11 @@
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       height: 36px;
-      // padding: 4px 0;
       white-space: pre-wrap;
+      &:hover {
+        color: $color-complimentary;
+        opacity: 1;
+      }
     }
     .features {
       display: grid;
