--- a/styles/global.scss
+++ b/styles/global.scss
@@ -237,9 +237,20 @@ textarea {
   }
 }
 
+@keyframes fadeInOutSlide {
+  from {
+    opacity: 0;
+    transform: translate(0, 20px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
 @keyframes moveAll {
   from {
-    transform: translate(-20px, -8px);
+    transform: translate(-40px, -8px);
   }
   to {
     transform: translateY(0, 0);
@@ -256,7 +267,7 @@ textarea {
 }
 
 .guy_svg__paperplane-icon {
-  animation: moveAll 8s ease infinite alternate;
+  animation: moveAll 6s ease infinite alternate;
 }
 .guy_svg__vehicle-icon {
   animation: fadeInOut 5s ease infinite alternate;
@@ -264,4 +275,11 @@ textarea {
 .guy_svg__arm-left {
   animation: moveHand 5s ease-in-out infinite alternate;
   transform-origin: 50px 150px;
+}
+.guy_svg__bubble-2 {
+  animation: fadeInOutSlide 3.5s ease infinite alternate;
+}
+
+.guy_svg__bubble-1 {
+  animation: fadeInOutSlide 3s ease infinite alternate;
 }
