--- a/styles/global.scss
+++ b/styles/global.scss
@@ -201,6 +201,18 @@ textarea {
   transform: translateX(-30px) scale(0.6);
 }
 
+.control-dots {
+  .dot {
+    background: $color-white !important;
+    transition: $transition;
+    box-shadow: unset !important;
+    &.selected {
+      background: $color-primary !important;
+      transform: scale(1.3);
+    }
+  }
+}
+
 .react-multi-carousel-dot-list {
   .react-multi-carousel-dot {
     button {
