add vehicle product page, add infinite bullet clicking for next/prev slides

--- a/components/User/Avatar.module.scss
+++ b/components/User/Avatar.module.scss
@@ -16,7 +16,8 @@
   }
   a {
     color: $color-primary;
-    font-size: $font-size-m;
+    font-size: $font-size-span;
+    font-family: $font-family-secondary;
   }
   p {
     font-family: $font-family;
