--- a/components/Cards/VehicleCard.module.scss
+++ b/components/Cards/VehicleCard.module.scss
@@ -32,6 +32,7 @@
     width: 100%;
     height: 180px;
     overflow: hidden;
+    border-top-right-radius: 8px;
     .imageLink {
       &:hover {
         img {
