--- a/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
+++ b/components/VehicleOfTheDay/VehicleOfTheDay.module.scss
@@ -101,6 +101,9 @@
   button:last-child {
     grid-column: 1/3;
   }
+  a:last-child {
+    grid-column: 1/3;
+  }
 }
 
 .price {
@@ -144,6 +147,12 @@
     }
     h6 {
       text-align: right;
+    }
+  }
+  &.vehicleDetailsFullHeight {
+    @media (max-width: $tablet) {
+      max-height: unset;
+      overflow: visible;
     }
   }
 }
