--- a/pages/listing/listing.module.scss
+++ b/pages/listing/listing.module.scss
@@ -16,7 +16,7 @@
   }
   padding: 0 spacing(0.5);
   @media (min-width: $tablet) {
-    padding: 0 0 spacing(8) 0;
+    padding: 0 spacing(6) spacing(8) spacing(6);
   }
 }
 
