add base profile

--- a/components/Vehicle/VehicleDetail.module.scss
+++ b/components/Vehicle/VehicleDetail.module.scss
@@ -22,7 +22,7 @@
     text-align: left;
     white-space: nowrap;
     line-height: $line-height-s;
-    font-family: $font-family-secondary;
+    font-family: $font-family;
     color: $color-black;
     font-size: $font-size-s;
     overflow: hidden;
