--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -2,11 +2,14 @@
 
 .container {
   max-width: $layout;
-  margin: 0 auto;
+  margin: 0 spacing(1);
   &.gray {
     background: $color-light-gray;
   }
   &.fullscreen {
     min-height: 100vh;
+  }
+  @media (min-width: $tablet) {
+    margin: 0 auto;
   }
 }
