--- a/components/Vehicle/VehicleAdvDetails.module.scss
+++ b/components/Vehicle/VehicleAdvDetails.module.scss
@@ -27,6 +27,13 @@
       justify-content: space-between;
       grid-gap: spacing(1);
       grid-template-columns: repeat(auto-fill, 45vw);
+      h6 {
+        font-size: $font-size-h6;
+        margin-bottom: spacing(1);
+      }
+      span {
+        font-size: $font-size-span;
+      }
       @media (min-width: $tablet) {
         grid-template-columns: repeat(auto-fill, 142px);
       }
