--- a/components/Header/DesktopHeader.module.scss
+++ b/components/Header/DesktopHeader.module.scss
@@ -34,6 +34,8 @@
   &:hover {
     svg {
       fill: $color-white;
+      color: $color-primary;
+      transform: rotate(90deg);
     }
     span {
       color: $color-white;
@@ -53,8 +55,16 @@
   }
 }
 .icon {
+  transition: $transition;
   fill: $color-primary;
   color: $color-primary;
+  transition: $transition;
+}
+.addListingIcon {
+  transition: $transition;
+  fill: $color-primary;
+  color: $color-white;
+  transition: $transition;
 }
 .drawerOpenIcon {
   fill: $color-dark;
@@ -106,6 +116,10 @@
     justify-content: center;
     align-items: center;
     box-shadow: $box-shadow-search;
+    transition: $transition;
+    &:hover {
+      transform: scale(1.1);
+    }
     @include for-safari-only {
       box-shadow: unset;
     }
