add offer view for vehicle card, fix crash

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -129,7 +129,7 @@ textarea {
 }
 
 .Toastify__toast--success {
-  background: $color-primary !important;
+  background: $color-complimentary-transparent-heavy !important;
 }
 
 .Toastify__toast--error {
