--- a/components/User/UserUnreads.module.scss
+++ b/components/User/UserUnreads.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   svg {
     fill: $color-primary;
-    color: $color-complimentary;
+    color: $color-complimentary-transparent-heavy;
   }
 }
 
