fix offer form stylings

--- a/components/Forms/OfferForm.module.scss
+++ b/components/Forms/OfferForm.module.scss
@@ -1,13 +1,23 @@
 @import 'vars.scss';
 
 .offer {
-  display: grid;
-  grid-gap: spacing(1);
-  align-items: center;
-  grid-template-columns: 1fr 2fr;
+  display: block;
+
   button {
     height: 34px;
     align-self: flex-end;
     margin-bottom: spacing(2);
+  }
+  input {
+    min-width: none;
+  }
+  @media (min-width: $tablet) {
+    display: grid;
+    grid-gap: spacing(1);
+    align-items: center;
+    grid-template-columns: 1fr 2fr;
+    input {
+      min-width: 120px;
+    }
   }
 }
