--- a/components/User/UserAvatar.module.scss
+++ b/components/User/UserAvatar.module.scss
@@ -8,7 +8,19 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	&.fullScreen {
+		width: 100%;
+		height: 100%;
+		span {
+			font-size: 20vw;
+			@media (min-width: $tablet) {
+				font-size: 5vw;
+			}
+		}
+	}
 	span {
+		text-transform: uppercase;
+		font-size: $font-size-span;
 		color: $color-white;
 	}
 }
