--- a/pages/profile/profile.module.scss
+++ b/pages/profile/profile.module.scss
@@ -77,6 +77,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    h1 {
+      text-align: center;
+      text-transform: capitalize;
+    }
+    @media (min-width: $small) {
+      h1 {
+        text-align: left;
+      }
+    }
     h1,
     h4,
     h6,
