--- a/pages/create-listing/create.module.scss
+++ b/pages/create-listing/create.module.scss
@@ -3,10 +3,12 @@
 .container {
   background: $color-light-gray;
   min-height: 100vh;
-  .layout {
-    padding: 0 spacing(0.5);
-    @media (min-width: $tablet) {
-      padding: 0 0 spacing(8) 0;
-    }
+  h1 {
+    margin: spacing(2) 0;
+  }
+
+  padding: spacing(4) spacing(0.5);
+  @media (min-width: $tablet) {
+    padding: 0 0 spacing(8) 0;
   }
 }
