--- a/pages/search/search.module.scss
+++ b/pages/search/search.module.scss
@@ -15,6 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   h1 {
     margin-bottom: spacing(2);
   }
