--- a/pages/create-listing/create.module.scss
+++ b/pages/create-listing/create.module.scss
@@ -8,6 +8,6 @@
 
   padding: spacing(4) spacing(0.5);
   @media (min-width: $tablet) {
-    padding: 0 0 spacing(8) 0;
+    padding: spacing(8) spacing(2);
   }
 }
