--- a/components/Input/Checkbox.module.scss
+++ b/components/Input/Checkbox.module.scss
@@ -68,6 +68,6 @@
 }
 
 .label {
-  margin-bottom: 0;
-  margin-left: spacing(1);
+  margin-bottom: 0 !important;
+  margin-left: spacing(1) !important;
 }
