--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -53,7 +53,8 @@
 
 .inputLabelContainer {
   margin-bottom: spacing(1);
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   span {
     transition: $transition;
     font-size: $font-size-p;
@@ -99,4 +100,38 @@
 
 .invalid {
   border: $border-thick-red;
+}
+
+.tooltipButton {
+  margin-left: spacing(1);
+  z-index: 1;
+}
+
+.tooltip {
+  position: absolute;
+  bottom: spacing(-1);
+  transform: translate(0, 100%);
+  padding: spacing(1) spacing(2);
+  background: $color-complimentary-transparent-heavy;
+  color: $color-white;
+  z-index: 2;
+  min-height: 60px;
+  display: flex;
+  align-items: center;
+  border-radius: $border-radius-small;
+  max-width: 50vw;
+  font-weight: $font-weight-light !important;
+
+  &:before {
+    content: '';
+    width: 0;
+    position: absolute;
+    top: 0;
+    left: 10%;
+    transform: translate(50%, -100%);
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid $color-complimentary-transparent-heavy;
+  }
 }
