--- a/components/Input/ImageUpload.module.scss
+++ b/components/Input/ImageUpload.module.scss
@@ -25,22 +25,109 @@
   svg {
     color: $color-primary;
   }
+  &.disabled {
+    background: $color-light-gray;
+    border: 2px solid $color-light-gray;
+    cursor: not-allowed;
+    h6,
+    svg {
+      color: $color-white;
+    }
+    &:hover {
+      background: $color-light-gray;
+      border: 2px solid $color-gray;
+    }
+  }
+  h6,
+  svg {
+    transition: $transition;
+  }
   margin-bottom: spacing(2);
+  &:hover {
+    border: 2px solid $color-primary;
+    background: $color-primary;
+    h6 {
+      color: $color-white;
+    }
+    svg {
+      color: $color-white;
+    }
+    section > div {
+      background: $color-white;
+    }
+  }
 }
 
 .images {
   display: grid;
   grid-template-columns: repeat(auto-fit, 64px);
   grid-gap: spacing(1);
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.image {
+  position: relative;
+  width: 64px;
+  height: 64px;
   img {
     width: 64px;
-    transition: $transition;
     height: 64px;
     border-radius: $border-radius-medium;
+    transition: $transition;
     object-fit: cover;
     border: 1px solid $color-light-gray;
     &:hover {
       border: 1px solid $color-primary;
     }
   }
+  .deleteButton {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: none;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: $transition;
+    background: $color-red;
+    border-radius: $border-radius-medium;
+    border: 1px solid $color-white;
+    animation-fill-mode: forwards;
+    opacity: 1;
+  }
+  &:hover {
+    .deleteButton {
+      animation: fadeIn 0.4s ease-in-out;
+      display: block;
+    }
+  }
+}
+
+.progressBarContainer {
+  width: 100%;
+  height: 20px;
+  margin: spacing(2) 0;
+  .progress {
+    height: 20px;
+    transition: all linear 0.2s;
+    width: var(--progress-bar);
+    background: $color-primary;
+  }
+}
+
+.loaders {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
