--- a/components/Input/ImageUpload.module.scss
+++ b/components/Input/ImageUpload.module.scss
@@ -38,6 +38,23 @@
       border: 2px solid $color-gray;
     }
   }
+  &.error {
+    background: $color-white;
+    border: 2px solid $color-red;
+    cursor: pointer;
+    h6,
+    svg {
+      color: $color-red;
+    }
+    &:hover {
+      border: 2px solid $color-red;
+      background: $color-white;
+      h6,
+      svg {
+        color: $color-primary;
+      }
+    }
+  }
   h6,
   svg {
     transition: $transition;
