--- a/components/Input/LocationInput.module.scss
+++ b/components/Input/LocationInput.module.scss
@@ -1,33 +1,51 @@
 @import 'vars.scss';
 
 .container {
-    position: relative;
-    margin-bottom: spacing(2);
-    .locationsList {
-        display: flex;
-        flex-direction: column;
-        padding: spacing(1) 0;
-        border: $border-light-gray;
-        background: $color-white;
-        width: 100%;
-        align-items: flex-start;
-        border-radius: $border-radius-input;
-        position: absolute;
-        bottom: spacing(-1);
-        transform: translate(0, 100%);
-        z-index: 1;
-        button {
-            padding: spacing(2) spacing(1);
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: flex-start;
-            &:hover {
-                color: $color-white;
-                background: $color-primary;
-            }
-        }
-
+  position: relative;
+  margin-bottom: spacing(2);
+  input {
+    text-transform: capitalize;
+  }
+  .locationsList {
+    display: flex;
+    flex-direction: column;
+    padding: spacing(1) 0;
+    border: $border-light-gray;
+    background: $color-white;
+    width: 100%;
+    align-items: flex-start;
+    border-radius: $border-radius-input;
+    position: absolute;
+    bottom: spacing(-1);
+    transform: translate(0, 100%);
+    z-index: 1;
+    max-height: 250px;
+    overflow: auto;
+    button {
+      padding: spacing(2) spacing(1);
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: flex-start;
+      &:hover {
+        color: $color-white;
+        background: $color-primary;
+      }
     }
+  }
 }
 
+.loaderContainer {
+  position: absolute;
+  bottom: spacing(1);
+  left: spacing(1);
+}
+
+.closeContainer {
+  position: absolute;
+  bottom: spacing(1);
+  right: spacing(1);
+  svg {
+    fill: $color-primary;
+  }
+}
