--- a/pages/listing/listing.module.scss
+++ b/pages/listing/listing.module.scss
@@ -8,6 +8,18 @@
   padding-bottom: spacing(12);
 }
 
+.soldDisclaimerContainer {
+  width: 100%;
+  background: $color-red;
+  border-radius: $border-radius-input;
+  margin: spacing(2) 0;
+  padding: spacing(1);
+  text-align: center;
+  span {
+    color: $color-white;
+  }
+}
+
 .layout {
   .subtitle {
     text-transform: uppercase;
@@ -23,6 +35,9 @@
 .images {
   height: 50vh;
   margin-bottom: spacing(1);
+  @media (min-width: $tablet) {
+    margin-bottom: spacing(5);
+  }
   img {
     height: 50vh;
     object-fit: cover;
@@ -34,7 +49,7 @@
 
 .prices {
   display: flex;
-  margin-bottom: spacing(0.5);
+  margin-bottom: spacing(2);
   span {
     text-decoration: none;
     font-size: $font-size-h5;
@@ -51,6 +66,9 @@
 
 .description {
   margin-bottom: spacing(2);
+  padding: spacing(2) 0;
+  border-top: 1px solid $color-gray;
+  border-bottom: 1px solid $color-gray;
   font-weight: $font-weight-light;
   white-space: pre;
 
