--- a/components/Pagination/InfinitePagination.module.scss
+++ b/components/Pagination/InfinitePagination.module.scss
@@ -33,3 +33,14 @@
     margin: none;
   }
 }
+
+.extra {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 spacing(0.5);
+  margin-bottom: spacing(1);
+  @media (min-width: $tablet) {
+    padding: 0 spacing(8);
+  }
+}
