--- a/components/Modals/BaseModal.module.scss
+++ b/components/Modals/BaseModal.module.scss
@@ -11,8 +11,17 @@
   z-index: 10000;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  pointer-events: none;
+  &.visible {
+    opacity: 1;
+    pointer-events: unset;
+  }
   .closeButton {
     display: flex;
+    position: absolute;
+    top: spacing(2);
+    right: spacing(2);
     margin-left: auto;
     svg {
       color: $color-gray;
@@ -20,7 +29,8 @@
   }
   .wrapper {
     overflow: auto;
-    height: 100%;
+    height: auto;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
