--- a/pages/search/search.module.scss
+++ b/pages/search/search.module.scss
@@ -6,7 +6,7 @@
   .layout {
     padding: 0 spacing(0.5);
     @media (min-width: $tablet) {
-      padding: 0 0 spacing(8) 0;
+      padding: 0 spacing(0.5) spacing(8) spacing(0.5);
     }
   }
 }
@@ -16,6 +16,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 0;
+  @media (min-width: $tablet) {
+    padding: spacing(8) spacing(1) 0 spacing(1);
+  }
   h1 {
     margin-bottom: spacing(2);
   }
