--- a/components/Input/Select.module.scss
+++ b/components/Input/Select.module.scss
@@ -44,6 +44,10 @@
     font-size: $font-size-p;
     line-height: $line-height-h5;
     color: $color-black;
+    @media (max-width: $tablet) {
+      white-space: nowrap;
+      max-width: 23vw;
+    }
   }
   &:focus {
     border: $border-thick-primary;
