--- a/components/Pickers/RangePicker.module.scss
+++ b/components/Pickers/RangePicker.module.scss
@@ -1,15 +1,18 @@
 @import 'vars.scss';
 
 .container {
-	display: flex;
-	.divider {
-		margin-top: spacing(6);
-		padding: 0 spacing(0.5);
-		.line {
-			width: 100%;
-			min-width: 56px;
-			height: 2px;
-			background: $color-light-gray;
-		}
-	}
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  .divider {
+    margin-top: spacing(6);
+    padding: 0 spacing(0.5);
+    .line {
+      width: 100%;
+      height: 2px;
+      background: $color-light-gray;
+      @media (min-width: $tablet) {
+        min-width: 56px;
+      }
+    }
+  }
 }
