--- a/pages/search/search.module.scss
+++ b/pages/search/search.module.scss
@@ -4,7 +4,7 @@
   background: $color-light-gray;
   min-height: 100vh;
   .layout {
-    padding: 0 spacing(0.5);
+    padding: 0 spacing(0.5) spacing(10) spacing(0.5);
     @media (min-width: $tablet) {
       padding: 0 spacing(0.5) spacing(8) spacing(0.5);
     }
@@ -16,11 +16,18 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 0;
+  padding: spacing(2) 0;
   @media (min-width: $tablet) {
     padding: spacing(8) spacing(1) 0 spacing(1);
   }
   h1 {
     margin-bottom: spacing(2);
+  }
+}
+
+.layout {
+  padding: 0 spacing(0.5) spacing(10) spacing(0.5);
+  @media (min-width: $tablet) {
+    padding: 0 spacing(0.5);
   }
 }
