--- a/pages/search/search.module.scss
+++ b/pages/search/search.module.scss
@@ -26,7 +26,7 @@
 }
 
 .layout {
-  padding: 0 spacing(0.5) spacing(10) spacing(0.5);
+  padding-bottom: spacing(10);
   @media (min-width: $tablet) {
     padding: 0 spacing(0.5);
   }
