--- a/components/Cards/VehicleCard.module.scss
+++ b/components/Cards/VehicleCard.module.scss
@@ -34,6 +34,10 @@
     overflow: hidden;
     border-top-right-radius: 8px;
     .imageLink {
+      span {
+        width: 100%;
+        height: 100%;
+      }
       &:hover {
         img {
           transform: scale(1.1);
