--- a/components/Image/ImageCarousel.module.scss
+++ b/components/Image/ImageCarousel.module.scss
@@ -24,6 +24,10 @@
     height: 100%;
     object-fit: cover;
   }
+  > span {
+    width: 100%;
+    height: 100%;
+  }
   .carousel {
     position: absolute;
 
@@ -55,7 +59,10 @@
         color: white;
       }
     }
-
+    span {
+      width: 100%;
+      height: 100%;
+    }
     img {
       border-radius: $border-radius-medium;
       border: 1px solid $color-light-gray;
