--- a/components/Modals/ImageListModal.module.scss
+++ b/components/Modals/ImageListModal.module.scss
@@ -3,6 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  min-width: 40vw;
   img {
     width: 100vw;
     height: calc(92vh - 34px);
