--- a/components/Cards/VehicleCard.module.scss
+++ b/components/Cards/VehicleCard.module.scss
@@ -37,6 +37,8 @@
       span {
         width: 100%;
         height: 100%;
+        border-top-right-radius: 8px;
+        border-top-left-radius: 8px;
       }
       &:hover {
         img {
