--- a/components/Cards/VehicleCard.module.scss
+++ b/components/Cards/VehicleCard.module.scss
@@ -46,7 +46,7 @@
         }
       }
       img {
-        transition: transform 0.6s ease;
+        transition: all 0.6s ease !important;
         border-top-right-radius: 8px;
         border-top-left-radius: 8px;
         object-fit: cover;
